# ASG-TestDataScience-1

./: Makefile  README.md  predict.py  pyproject.toml  requirements.txt  setup.cfg
notebooks/: main.ipynb
