[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "asg_testdatascience_1"
version = "0.0.1"
description = "This repository contains a comprehensive project focused on the detection of malaria-infected cells using deep learning techniques. The project utilizes a convolutional neural network (CNN) architecture, specifically leveraging transfer learning with a pre-trained MobileNetV2 model."
authors = [
  { name = "Antonio Segovia Galante" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.15"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["asg_testdatascience_1"]
force_sort_within_sections = true
